--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@ meta/Format.m                   export-ignore
 meta/writeNRGE.m                export-ignore
 meta/writeRGE.m                 export-ignore
 
+model_files/CMSSMLowPrecision   export-ignore
 model_files/InertMSSM           export-ignore
 model_files/LHInputMSSM         export-ignore
 model_files/MSSMCPV             export-ignore
