--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -58,6 +58,8 @@ private:
    @ModelName@_input_parameters inputPars;
    QedQcd oneset;
    Eigen::Matrix<std::complex<double>,3,3> ckm;
+   Eigen::Matrix<std::complex<double>,3,3> pmns;
+   Eigen::Matrix<double,3,3> neutrinoDRbar;
    double MZDRbar;
    double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
@@ -67,6 +69,7 @@ private:
    void calculate_@UpYukawa@_DRbar();
    void calculate_@DownYukawa@_DRbar();
    void calculate_@ElectronYukawa@_DRbar();
+   void calculate_MNeutrino_DRbar();
    double calculate_delta_alpha_em(double) const;
    double calculate_delta_alpha_s(double) const;
    void update_scale();
