--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -91,6 +91,7 @@ private:
    void set_mixing_matrices(const @ModelName@_physical&, bool);
    template <class T> void set_model_parameters(const @ModelName@_slha<T>&);
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, double);
+   void set_pmns(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    double read_scale() const;
    template <class T> void fill_drbar_parameters(@ModelName@_slha<T>&) const;
    template <class T> void fill_physical(@ModelName@_slha<T>&) const;
@@ -212,6 +213,9 @@ void @ModelName@_slha_io::set_spectrum(const @ModelName@_slha<T>& model)
 
    if (slha_io.get_modsel().quark_flavour_violated)
       set_ckm(model.get_ckm_matrix(), model.get_scale());
+
+   if (slha_io.get_modsel().lepton_flavour_violated)
+      set_pmns(model.get_pmns_matrix(), model.get_scale());
 }
 
 } // namespace flexiblesusy
