--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -96,6 +96,11 @@ int main(int argc, const char* argv[])
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems
       = spectrum_generator.get_problems();
 
+   @ModelName@_scales scales;
+   scales.HighScale = spectrum_generator.get_high_scale();
+   scales.SUSYScale = spectrum_generator.get_susy_scale();
+   scales.LowScale  = spectrum_generator.get_low_scale();
+
    // output
    slha_io.set_spinfo(problems);
    slha_io.set_sminputs(oneset);
@@ -103,7 +108,7 @@ int main(int argc, const char* argv[])
    slha_io.set_extpar(input);
    if (!problems.have_problem()) {
       slha_io.set_spectrum(model);
-      slha_io.set_extra(model);
+      slha_io.set_extra(model, scales);
    }
 
    if (slha_output_file.empty()) {
