--- a/templates/run_cmd_line.cpp.in
+++ b/templates/run_cmd_line.cpp.in
@@ -87,8 +87,13 @@ int main(int argc, char* argv[])
    const int exit_code = spectrum_generator.get_exit_code();
    const @ModelName@_slha<algorithm_type> model(spectrum_generator.get_model());
 
+   @ModelName@_scales scales;
+   scales.HighScale = spectrum_generator.get_high_scale();
+   scales.SUSYScale = spectrum_generator.get_susy_scale();
+   scales.LowScale  = spectrum_generator.get_low_scale();
+
    // SLHA output
-   SLHAea::Coll slhaea(@ModelName@_slha_io::fill_slhaea(model, oneset));
+   SLHAea::Coll slhaea(@ModelName@_slha_io::fill_slhaea(model, oneset, scales));
 
    std::cout << slhaea;
 
