--- a/model_files/CMSSMCKM/FlexibleSUSY.m.in
+++ b/model_files/CMSSMCKM/FlexibleSUSY.m.in
@@ -32,11 +32,11 @@ HighScaleInput = {
    {T[Yu], Re[MatMul[Tp[ZUR], Tp[LHInput[T[Yu]]], ZUL]]},
    {mHd2, mHd2IN},
    {mHu2, mHu2IN},
-   {mq2, Re[MatMul[Tp[ZDL], LHInput[mq2], ZDL]]},
-   {ml2, Re[MatMul[Tp[ZEL], LHInput[ml2], ZEL]]},
-   {md2, Re[MatMul[Tp[ZDR], Tp[LHInput[md2]], ZDR]]},
-   {mu2, Re[MatMul[Tp[ZUR], Tp[LHInput[mu2]], ZUR]]},
-   {me2, Re[MatMul[Tp[ZER], Tp[LHInput[me2]], ZER]]},
+   {mq2, Re[MatMul[Tp[ZDR], LHInput[mq2], ZDR]]},
+   {ml2, Re[MatMul[Tp[ZER], LHInput[ml2], ZER]]},
+   {md2, Re[MatMul[Tp[ZDL], Tp[LHInput[md2]], ZDL]]},
+   {mu2, Re[MatMul[Tp[ZUL], Tp[LHInput[mu2]], ZUL]]},
+   {me2, Re[MatMul[Tp[ZEL], Tp[LHInput[me2]], ZEL]]},
    {MassB, LHInput[MassB]},
    {MassWB,LHInput[MassWB]},
    {MassG, LHInput[MassG]}
