--- a/model_files/CMSSMCKM/FlexibleSUSY.m.in
+++ b/model_files/CMSSMCKM/FlexibleSUSY.m.in
@@ -48,8 +48,8 @@ LowScaleFirstGuess = SM[MZ];
 
 LowScaleInput = {
    {Yu, Sqrt[2] Re[MatMul[Tp[CKM], topDRbar]] / vu},
-   {Yd, Sqrt[2] Re[MatMul[bottomDRbar]] / vd},
-   {Ye, Sqrt[2] Re[MatMul[electronDRbar]] / vd},
+   {Yd, Sqrt[2] bottomDRbar / vd},
+   {Ye, Sqrt[2] electronDRbar / vd},
    {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
    {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
 };
