--- a/templates/module.addon.mk.in
+++ b/templates/module.addon.mk.in
@@ -33,9 +33,8 @@ EXE@ADDON@_EXE := \
 LIB@ADDON@     := \
 		$(DIR)/lib$(MODNAME)$(LIBEXT)
 
-.PHONY:         all-$(MODNAME) clean-$(MODNAME) clean-$(MODNAME)-src \
-		distclean-$(MODNAME) run-metacode-$(MODNAME) \
-		pack-$(MODNAME)-src
+.PHONY:         clean-$(MODNAME) clean-$(MODNAME)-dep clean-$(MODNAME)-obj \
+		distclean-$(MODNAME)
 
 clean-$(MODNAME)-dep:
 		-rm -f $(LIB@ADDON@_DEP)
