--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -142,6 +142,7 @@ SARAH_MODEL_FILES_@CLASSNAME@ := \
 endif
 
 .PHONY:         all-$(MODNAME) clean-$(MODNAME) clean-$(MODNAME)-src \
+		clean-$(MODNAME)-dep clean-$(MODNAME)-obj \
 		distclean-$(MODNAME) run-metacode-$(MODNAME) \
 		pack-$(MODNAME)-src
 
