Bugfix: set EWSB output parameters to the solver's solution
Before this commit, the EWSB output parameter values from the last
call of tadpole_equations was used.  However, these values don't
necessarily correspond to the best EWSB solution.  The best solution
is the one stored in the solver!

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -292,6 +292,8 @@ int CLASSNAME::solve_ewsb_iteratively_with(
 {
    const int status = solver->solve(x_init);
 
+@setEWSBSolution@
+
    return status;
 }
 
