update SMSSM EWSB solution

--- a/model_files/SMSSM/FlexibleSUSY.m.in
+++ b/model_files/SMSSM/FlexibleSUSY.m.in
@@ -83,8 +83,8 @@ InitialGuessAtLowScale = {
 
 InitialGuessAtHighScale = {};
 
-(* This tree-level EWSB solution was generated with FlexibleSUSY
-   0.3. *)
+(* This EWSB solution was generated with FlexibleSUSY
+   1.0.4-alpha. *)
 TreeLevelEWSBSolution = {
    { B[\[Mu]],
     (-20*mHd2*vd*vu + 20*mHu2*vd*vu - 3*g1^2*vd^3*vu -
@@ -99,7 +99,8 @@ TreeLevelEWSBSolution = {
       10*vd^3*vu*\[Lambda]*conj[\[Lambda]] - 10*vd*vu^3*\[Lambda]*
        conj[\[Lambda]] - 5*Sqrt[2]*vd^2*vS*conj[T[\[Lambda]]] +
       5*Sqrt[2]*vS*vu^2*conj[T[\[Lambda]]] - 5*Sqrt[2]*vd^2*vS*T[\[Lambda]] +
-      5*Sqrt[2]*vS*vu^2*T[\[Lambda]])/(20*(vd^2 - vu^2))
+      5*Sqrt[2]*vS*vu^2*T[\[Lambda]] + 20*vu*tadpole[1] - 20*vd*tadpole[2])/
+     (20*(vd^2 - vu^2))
    },
    { \[Mu],
     (-20*Sqrt[2]*vd*vS*\[Lambda] - 20*Sqrt[2]*vd*vS*conj[\[Lambda]] +
@@ -112,8 +113,8 @@ TreeLevelEWSBSolution = {
           10*Sqrt[2]*MS*vS*vu*conj[\[Lambda]] - 10*vS^2*vu*\[Kappa]*
            conj[\[Lambda]] + 20*vd*vS^2*\[Lambda]*conj[\[Lambda]] +
           20*vd*vu^2*\[Lambda]*conj[\[Lambda]] - 10*Sqrt[2]*vS*vu*
-           conj[T[\[Lambda]]] - 10*Sqrt[2]*vS*vu*T[\[Lambda]])])/(80*vd)
-   },
+           conj[T[\[Lambda]]] - 10*Sqrt[2]*vS*vu*T[\[Lambda]] -
+          40*tadpole[1])])/(80*vd)},
    { L[L1],
      -(4*ms2*vS + Sqrt[2]*vd^2*\[Lambda]*\[Mu] +
        Sqrt[2]*vu^2*\[Lambda]*\[Mu] + 2*vS*B[MS] + 2*Sqrt[2]*MS*conj[L1] +
@@ -127,7 +128,7 @@ TreeLevelEWSBSolution = {
         conj[\[Lambda]] + Sqrt[2]*vu^2*\[Mu]*conj[\[Lambda]] +
        2*vS*conj[B[MS]] + Sqrt[2]*vS^2*conj[T[\[Kappa]]] -
        Sqrt[2]*vd*vu*conj[T[\[Lambda]]] + Sqrt[2]*vS^2*T[\[Kappa]] -
-       Sqrt[2]*vd*vu*T[\[Lambda]])/(4*Sqrt[2])
+       Sqrt[2]*vd*vu*T[\[Lambda]] - 4*tadpole[3])/(4*Sqrt[2])
    }
 };
 
