correcting used EWSB solver (copy-and-paste error)

--- a/model_files/CMSSMGSLBroyden/FlexibleSUSY.m.in
+++ b/model_files/CMSSMGSLBroyden/FlexibleSUSY.m.in
@@ -119,4 +119,4 @@ ExtraSLHAOutputBlocks = {
             {49, Sqrt[md2[3,3]]} } }
 };
 
-FSEWSBSolvers = { GSLHybrid };
+FSEWSBSolvers = { GSLBroyden };
