--- a/model_files/lowMSSM/FlexibleSUSY.m.in
+++ b/model_files/lowMSSM/FlexibleSUSY.m.in
@@ -37,6 +37,10 @@ UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 
 ExtraSLHAOutputBlocks = {
+   {FlexibleSUSYOutput,
+           {{0, Hold[HighScale]},
+            {1, Hold[SUSYScale]},
+            {2, Hold[LowScale]} } },
    {ALPHA, {{ArcCos[Pole[ZH[1,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
