adding high-scale protection for the TMSSM

--- a/model_files/TMSSM/FlexibleSUSY.m.in
+++ b/model_files/TMSSM/FlexibleSUSY.m.in
@@ -48,6 +48,10 @@ HighScaleInput = {
    {MassG,m12}
 };
 
+HighScaleMinimum = 1.0 10^8;
+
+HighScaleMaximum = 5.0 10^17;
+
 LowScale = SM[MZ];
 
 LowScaleFirstGuess = SM[MZ];
