Revert "use initialization lists for the vector of constraints"
This reverts commit 3ce384bd931a1936d6a20e258383e47414b12d18.

Intel's C++ compiler version 12 and 13 cannot handle initialization
lists.  Therefore, we disable them.

--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -127,16 +127,14 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    susy_scale_constraint.initialize();
    low_scale_constraint .initialize();
 
-   std::vector<Constraint<T>*> upward_constraints {
-      &low_scale_constraint,
-      &high_scale_constraint
-   };
+   std::vector<Constraint<T>*> upward_constraints;
+   upward_constraints.push_back(&low_scale_constraint);
+   upward_constraints.push_back(&high_scale_constraint);
 
-   std::vector<Constraint<T>*> downward_constraints {
-      &high_scale_constraint,
-      &susy_scale_constraint,
-      &low_scale_constraint
-   };
+   std::vector<Constraint<T>*> downward_constraints;
+   downward_constraints.push_back(&high_scale_constraint);
+   downward_constraints.push_back(&susy_scale_constraint);
+   downward_constraints.push_back(&low_scale_constraint);
 
    model.clear();
    model.set_input_parameters(input);
