--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -119,13 +119,13 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    susy_scale_constraint.initialize();
    low_scale_constraint .initialize();
 
-   std::vector<Constraint<T>*> upward_constraints;
-   upward_constraints.push_back(&low_scale_constraint);
-   upward_constraints.push_back(&susy_scale_constraint);
+   std::vector<Constraint<T>*> upward_constraints(2, NULL);
+   upward_constraints[0] = &low_scale_constraint;
+   upward_constraints[1] = &susy_scale_constraint;
 
-   std::vector<Constraint<T>*> downward_constraints;
-   downward_constraints.push_back(&susy_scale_constraint);
-   downward_constraints.push_back(&low_scale_constraint);
+   std::vector<Constraint<T>*> downward_constraints(2, NULL);
+   downward_constraints[0] = &susy_scale_constraint;
+   downward_constraints[1] = &low_scale_constraint;
 
    model.set_input_parameters(input);
    model.do_calculate_sm_pole_masses(calculate_sm_masses);
