support MW and MZ pole mass input
The W boson mass can be input in FlexibleSUSY block entry 12.
The Z block mass can be input in SMINPUTS block entry 4.

--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -67,6 +67,7 @@ int main(int argc, const char* argv[])
    }
 
    oneset.toMz(); // run SM fermion masses to MZ
+   oneset.setPoleMW(spectrum_generator_settings.get(Spectrum_generator_settings::mw_pole));
 
    @ModelName@_spectrum_generator<algorithm_type> spectrum_generator;
    spectrum_generator.set_precision_goal(
