--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -175,12 +175,12 @@ void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_coupling
    const double e_drbar        = Sqrt(4.0 * Pi * alpha_em_drbar);
 
    // interface variables
-   MZDRbar = Electroweak_constants::MZ;
-   double MWDRbar = Electroweak_constants::MW;
+   MZDRbar = oneset.displayPoleMZ();
+   double MWDRbar = oneset.displayPoleMW();
 
    if (model->get_thresholds()) {
-      MZDRbar = model->calculate_M@VectorZ@_DRbar(Electroweak_constants::MZ);
-      MWDRbar = model->calculate_M@VectorW@_DRbar(Electroweak_constants::MW);
+      MZDRbar = model->calculate_M@VectorZ@_DRbar(oneset.displayPoleMZ());
+      MWDRbar = model->calculate_M@VectorW@_DRbar(oneset.displayPoleMW());
    }
 
    const double AlphaS = alpha_s_drbar;
