non-perturbativity check for dimensionless parameters at GUT scale
The check can be disabled by setting

  FSCheckPerturbativityOfDimensionlessParameters = False;

in the model file.  The threshold can be set via

  FSPerturbativityThreshold = N[Sqrt[4 Pi]];

in the model file.

--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -98,6 +98,9 @@ void @ModelName@_high_scale_constraint<Two_scale>::apply()
    update_scale();
 
 @applyConstraint@
+   {
+@checkPerturbativityForDimensionlessParameters@
+   }
 }
 
 double @ModelName@_high_scale_constraint<Two_scale>::get_scale() const
